deploy/manifests/Deployment.yaml
# Source: hello-kubernetes/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-RELEASE-NAME
  labels:
    app.kubernetes.io/name: hello-kubernetes
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.10"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-kubernetes
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-kubernetes
        app.kubernetes.io/instance: RELEASE-NAME
    spec:
      serviceAccountName: hello-kubernetes-RELEASE-NAME
      containers:
        - name: hello-kubernetes
          image: "rajprakarsh/hello-k8s:1.10"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
